// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render should render TaskList with no tasks text 1`] = `
<div>
  <h3>
    No tasks yet
  </h3>
</div>
`;

exports[`render should render TaskList with tasks in groups 1`] = `
<div>
  <TaskListGroup
    group={
      Object {
        "groupName": "CS2030",
        "tasks": Array [
          Object {
            "completed": false,
            "deadline": 1591329600000,
            "description": "Catch up on lectures!",
            "id": "5feb18c0-78a8-49b6-8584-75b8c1b40abc",
            "module": "CS2030",
            "title": "Watch lecture",
          },
          Object {
            "completed": false,
            "description": "",
            "id": "a1050220-fa88-4dc2-aa9d-9521ae95de47",
            "module": "CS2030",
            "title": "Do lab",
          },
        ],
      }
    }
    key="CS2030"
  />
  <TaskListGroup
    group={
      Object {
        "groupName": "others",
        "tasks": Array [
          Object {
            "completed": true,
            "description": "",
            "id": "d2b10492-853d-4290-baf8-cb47cd4ec04e",
            "module": "",
            "title": "Read a book everyday",
          },
        ],
      }
    }
    key="others"
  />
  <TaskListGroup
    group={
      Object {
        "groupName": "CS2040S",
        "tasks": Array [
          Object {
            "completed": true,
            "description": "",
            "id": "73c8ac1a-1d06-46ee-a39e-e656e1e41db0",
            "module": "CS2040S",
            "title": "Do problem set",
          },
        ],
      }
    }
    key="CS2040S"
  />
</div>
`;

exports[`render should render TaskList with tasks sorted by deadline in reverse 1`] = `
<div>
  <Connect(TaskListItem)
    key="a1050220-fa88-4dc2-aa9d-9521ae95de47"
    showGroup={true}
    task={
      Object {
        "completed": false,
        "description": "",
        "id": "a1050220-fa88-4dc2-aa9d-9521ae95de47",
        "module": "CS2030",
        "title": "Do lab",
      }
    }
  />
  <Connect(TaskListItem)
    key="d2b10492-853d-4290-baf8-cb47cd4ec04e"
    showGroup={true}
    task={
      Object {
        "completed": true,
        "description": "",
        "id": "d2b10492-853d-4290-baf8-cb47cd4ec04e",
        "module": "",
        "title": "Read a book everyday",
      }
    }
  />
  <Connect(TaskListItem)
    key="73c8ac1a-1d06-46ee-a39e-e656e1e41db0"
    showGroup={true}
    task={
      Object {
        "completed": true,
        "description": "",
        "id": "73c8ac1a-1d06-46ee-a39e-e656e1e41db0",
        "module": "CS2040S",
        "title": "Do problem set",
      }
    }
  />
  <Connect(TaskListItem)
    key="5feb18c0-78a8-49b6-8584-75b8c1b40abc"
    showGroup={true}
    task={
      Object {
        "completed": false,
        "deadline": 1591329600000,
        "description": "Catch up on lectures!",
        "id": "5feb18c0-78a8-49b6-8584-75b8c1b40abc",
        "module": "CS2030",
        "title": "Watch lecture",
      }
    }
  />
</div>
`;

exports[`render should render TaskList with tasks sorted by name 1`] = `
<div>
  <Connect(TaskListItem)
    key="a1050220-fa88-4dc2-aa9d-9521ae95de47"
    showGroup={true}
    task={
      Object {
        "completed": false,
        "description": "",
        "id": "a1050220-fa88-4dc2-aa9d-9521ae95de47",
        "module": "CS2030",
        "title": "Do lab",
      }
    }
  />
  <Connect(TaskListItem)
    key="73c8ac1a-1d06-46ee-a39e-e656e1e41db0"
    showGroup={true}
    task={
      Object {
        "completed": true,
        "description": "",
        "id": "73c8ac1a-1d06-46ee-a39e-e656e1e41db0",
        "module": "CS2040S",
        "title": "Do problem set",
      }
    }
  />
  <Connect(TaskListItem)
    key="d2b10492-853d-4290-baf8-cb47cd4ec04e"
    showGroup={true}
    task={
      Object {
        "completed": true,
        "description": "",
        "id": "d2b10492-853d-4290-baf8-cb47cd4ec04e",
        "module": "",
        "title": "Read a book everyday",
      }
    }
  />
  <Connect(TaskListItem)
    key="5feb18c0-78a8-49b6-8584-75b8c1b40abc"
    showGroup={true}
    task={
      Object {
        "completed": false,
        "deadline": 1591329600000,
        "description": "Catch up on lectures!",
        "id": "5feb18c0-78a8-49b6-8584-75b8c1b40abc",
        "module": "CS2030",
        "title": "Watch lecture",
      }
    }
  />
</div>
`;

exports[`render should render TaskList with tasks sorted by name in reverse 1`] = `
<div>
  <Connect(TaskListItem)
    key="5feb18c0-78a8-49b6-8584-75b8c1b40abc"
    showGroup={true}
    task={
      Object {
        "completed": false,
        "deadline": 1591329600000,
        "description": "Catch up on lectures!",
        "id": "5feb18c0-78a8-49b6-8584-75b8c1b40abc",
        "module": "CS2030",
        "title": "Watch lecture",
      }
    }
  />
  <Connect(TaskListItem)
    key="d2b10492-853d-4290-baf8-cb47cd4ec04e"
    showGroup={true}
    task={
      Object {
        "completed": true,
        "description": "",
        "id": "d2b10492-853d-4290-baf8-cb47cd4ec04e",
        "module": "",
        "title": "Read a book everyday",
      }
    }
  />
  <Connect(TaskListItem)
    key="73c8ac1a-1d06-46ee-a39e-e656e1e41db0"
    showGroup={true}
    task={
      Object {
        "completed": true,
        "description": "",
        "id": "73c8ac1a-1d06-46ee-a39e-e656e1e41db0",
        "module": "CS2040S",
        "title": "Do problem set",
      }
    }
  />
  <Connect(TaskListItem)
    key="a1050220-fa88-4dc2-aa9d-9521ae95de47"
    showGroup={true}
    task={
      Object {
        "completed": false,
        "description": "",
        "id": "a1050220-fa88-4dc2-aa9d-9521ae95de47",
        "module": "CS2030",
        "title": "Do lab",
      }
    }
  />
</div>
`;

exports[`render should render TaskList with tasks ungrouped 1`] = `
<div>
  <Connect(TaskListItem)
    key="5feb18c0-78a8-49b6-8584-75b8c1b40abc"
    showGroup={true}
    task={
      Object {
        "completed": false,
        "deadline": 1591329600000,
        "description": "Catch up on lectures!",
        "id": "5feb18c0-78a8-49b6-8584-75b8c1b40abc",
        "module": "CS2030",
        "title": "Watch lecture",
      }
    }
  />
  <Connect(TaskListItem)
    key="a1050220-fa88-4dc2-aa9d-9521ae95de47"
    showGroup={true}
    task={
      Object {
        "completed": false,
        "description": "",
        "id": "a1050220-fa88-4dc2-aa9d-9521ae95de47",
        "module": "CS2030",
        "title": "Do lab",
      }
    }
  />
  <Connect(TaskListItem)
    key="d2b10492-853d-4290-baf8-cb47cd4ec04e"
    showGroup={true}
    task={
      Object {
        "completed": true,
        "description": "",
        "id": "d2b10492-853d-4290-baf8-cb47cd4ec04e",
        "module": "",
        "title": "Read a book everyday",
      }
    }
  />
  <Connect(TaskListItem)
    key="73c8ac1a-1d06-46ee-a39e-e656e1e41db0"
    showGroup={true}
    task={
      Object {
        "completed": true,
        "description": "",
        "id": "73c8ac1a-1d06-46ee-a39e-e656e1e41db0",
        "module": "CS2040S",
        "title": "Do problem set",
      }
    }
  />
</div>
`;
